# hp-capstone-2025-backend

./: '  .gitignore  Cargo.lock.old  Cargo.toml  README.md  database.rs  eslint.config.mjs  hello.js  mongodb.js  package.json  server.js  server.service  simulation.js  typedefs.js
.github/workflows/: ci-worfklow.yml  push-to-aws-ec2.yml  push_to_aws_ec2.yml
database/: collection-0-7789881171601143600.wt  collection-2-7789881171601143600.wt  collection-4-7789881171601143600.wt  collection-7-14159572177558621270.wt  index-1-7789881171601143600.wt  index-3-7789881171601143600.wt  index-5-7789881171601143600.wt  index-8-14159572177558621270.wt
db/: cade-databaseMigration.sql  database.db3  database.db3.old  run_current_sql.sh  run_sql.sh
db/current_sql/: cade-sqlite.sql  create-database.sql  dummy-data.sql
db/sql/: create-database.sql  dummy-data.sql
documentation/: schema.md
js_version/: README.md  eslint.config.mjs  mongodb.js  package.json  server.js  server.service  simulation.js
js_version/test/integration/: mongodb.test.js
js_version/test/unit/: simulation.test.js
src/: api.rs  api_ref.txt  database.rs  main.rs  simulation.rs  validation.rs  workflow.rs  workflow_steps.rs
test/integration/: mongodb.test.js  server.test.js
test/unit/: server.test.js
tests/: api.rs  main.rs  validation.rs  workflow.rs
