[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
http = "1.2.0"
hyper = "1.5.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.10.0"
lazy_static = "1.5.0"

[dev-dependencies]
serial_test = "0.5"

[lib]
name = "backend"
path = "src/main.rs"
