[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
http = "1.2.0"
hyper = "1.5.2"
lazy_static = "1.4"
rusqlite = { version = "0.25.4"}
libsqlite3-sys = { version = "0.22.2", features = ["bundled"]}
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }

[lib]
name = "backend"
path = "src/main.rs"
